header design according to figma

--- a/index.html
+++ b/index.html
@@ -10,18 +10,37 @@
     rel="stylesheet">
     <link rel="stylesheet" href="styles/portfolio.css">
 </head>
-<body class="font-open-sans">
+<body class="font-open-sans">--
   <header>
 <nav>
   <div class="logo">
     <h2>Ay<span class="color-orange">as</span>ha</h2>
   </div>
-  <ul class="menu">
-<li><a href="">Portfolio</a></li>
-<li><a href="">Blog</a></li>
-<li><button class="btn">Hire Me</button></li>
-  </ul>
+  <div>
+<ul class="menu">
+  <li><a href="">Portfolio</a></li>
+  <li><a href="">Blog</a></li>
+  <li><button class="btn">Hire Me</button></li>
+</ul>
 </nav>
+<section id="banner">
+  <div class="banner-content">
+    <h2>Hi,I am</h2>
+    <h1>Ayasha Tasnim</h1>
+    <!-- dummy text/placeholder -->
+    <p>I am a beginner web developer learning modern web technologies.
+      I enjoy building clean and responsive websites using HTML and CSS.
+      Currently, I am practicing front-end development and improving my design skills step by step.</p>
+    <button class="btn">Download CV</button>
+    <button class="btn">Contact</button>
+
+  </div>
+  
+  </div>
+  <div class="banner-image">
+    <img src="myself/me.png" alt="">
+  </div>
+</section>
   </header>
 </body>
 </html>
