--- a/index.html
+++ b/index.html
@@ -42,5 +42,35 @@
   </div>
 </section>
   </header>
+  <section id="about">
+    <div class="about-container">
+      <div class="section-heading">
+        <h2>About Me</h2>
+        <p>I’m a beginner web development student who is learning to build clean, responsive, and user-friendly websites using
+        HTML, CSS, and JavaScript. I enjoy practicing web design, exploring modern layouts, and improving my coding skills
+        through hands-on projects. I’m always eager to learn new technologies and grow step by step as a web developer.</p>
+      </div>
+      <div class="about-info">
+        <div class="info-card">
+          <p> Name:</p>
+          <h4>Ayasha Tasnim</h4>
+        </div>
+        <div class="info-card">
+          <p>Email:</p>
+          <h4>ayashatasnim291@gmail.com</h4>
+        </div>
+        <div class="info-card">
+          <p>Date of birth:</p>
+          <h4>16 Feb 2003</h4>
+        </div>
+        <div class="info-card">
+          <p>From:</p>
+          <h4>Cumilla,Bangladesh</h4>
+        </div>
+      </div>
+
+    </div>
+
+  </section>
 </body>
 </html>
