--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,47 +9,52 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
     rel="stylesheet">
-    <link rel="stylesheet" href="styles/portfolio.css">
+  <link rel="stylesheet" href="styles/portfolio.css">
 </head>
+
 <body class="font-open-sans">--
   <header>
-<nav>
-  <div class="logo">
-    <h2>Ay<span class="color-orange">as</span>ha</h2>
-  </div>
-  <div>
-<ul class="menu">
-  <li><a href="">Portfolio</a></li>
-  <li><a href="">Blog</a></li>
-  <li><button class="btn">Hire Me</button></li>
-</ul>
-</nav>
-<section id="banner">
-  <div class="banner-content">
-    <h2>Hi,I am</h2>
-    <h1>Ayasha Tasnim</h1>
-    <!-- dummy text/placeholder -->
-    <p>I am a beginner web developer learning modern web technologies.
-      I enjoy building clean and responsive websites using HTML and CSS.
-      Currently, I am practicing front-end development and improving my design skills step by step.</p>
-    <button class="btn">Download CV</button>
-    <button class="btn">Contact</button>
+    <nav>
+      <div class="logo">
+        <h2>Ay<span class="color-orange">as</span>ha</h2>
+      </div>
+      <div>
+        <ul class="menu">
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Blog</a></li>
+          <li><button class="btn">Hire Me</button></li>
+        </ul>
+        </div>
+    </nav>
+    <section id="banner">
+      <div class="banner-content">
+        <h2>Hi,I am</h2>
+        <h1>Ayasha Tasnim</h1>
+        <!-- dummy text/placeholder -->
+        <p>I am a beginner web developer learning modern web technologies.
+          I enjoy building clean and responsive websites using HTML and CSS.
+          Currently, I am practicing front-end development and improving my design skills step by step.</p>
+        <button class="btn">Download CV</button>
+        <button class="btn">Contact</button>
 
-  </div>
-  
-  </div>
-  <div class="banner-image">
-    <img src="myself/me.png" alt="">
-  </div>
-</section>
+      </div>
+
+      </div>
+      <div class="banner-image">
+        <img src="myself/me.png" alt="">
+      </div>
+    </section>
   </header>
   <section id="about">
     <div class="about-container">
       <div class="section-heading">
         <h2>About Me</h2>
-        <p>I’m a beginner web development student who is learning to build clean, responsive, and user-friendly websites using
-        HTML, CSS, and JavaScript. I enjoy practicing web design, exploring modern layouts, and improving my coding skills
-        through hands-on projects. I’m always eager to learn new technologies and grow step by step as a web developer.</p>
+        <p>I’m a beginner web development student who is learning to build clean, responsive, and user-friendly websites
+          using
+          HTML, CSS, and JavaScript. I enjoy practicing web design, exploring modern layouts, and improving my coding
+          skills
+          through hands-on projects. I’m always eager to learn new technologies and grow step by step as a web
+          developer.</p>
       </div>
       <div class="about-info">
         <div class="info-card">
@@ -72,5 +78,43 @@
     </div>
 
   </section>
+  <section id="Skills">
+    <div class="Skills-container">
+      <div class="section-heading">
+        <h2>What I do</h2>
+          <p>I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my
+          main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume
+          and project portfolio.</p>
+        </div>
+        <div class="skill-box">
+          <div class="skill-card">
+            <img src="images/icons/js.png" alt="">
+            <h3>Vanilla JavaScript</h3>
+            <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available.
+            Aenean commodo ligula eget dolor. </p>
+          </div>
+          <div class="skill-card">
+            <img src="images/icons/react.png" alt="">
+            <h3>React</h3>
+            <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available.
+            Aenean commodo ligula eget dolor.</p>
+          </div>
+          <div class="skill-card">
+            <img src="images/icons/nodejs.png" alt="">
+            <h3>Node.js</h3>
+            <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available.
+            Aenean commodo ligula eget dolor.</p>
+            </div>
+          <div class="skill-card">
+            <img src="images/icons/mongo.png" alt="">
+            <h3>Mongo DB</h3>
+            <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available.
+            Aenean commodo ligula eget dolor.</p>
+          </div>
+
+        </div>
+    </div>
+  </section>
 </body>
+
 </html>
